--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           cache: 'maven'
           
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: cd SWCWD-BE && mvn -B package --file pom.xml
 
       - name: Create ZIP File 
         run: zip -qq -r ./SWCWD-build.zip ./target/*.jar
