--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Build with Maven
         run: cd SWCWD-BE && mvn -B package --file pom.xml
 
+      - run: ls -al
+
       - name: Create ZIP File 
         run: zip -qq SWCWD-build.zip target/*.jar appspec.yml scripts/deploy.sh
       
