--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,10 @@ jobs:
           java-version: '8'
           cache: 'maven'
           
+      - run: cd SWCWD-BE
+          
       - name: Build with Maven
-        run: cd SWCWD-BE && mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml
 
       - run: ls -al
 
