--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: swcwd-workflow
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "main", "develop" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -35,7 +35,7 @@ jobs:
         run: cd SWCWD-BE && mvn -B package --file pom.xml
 
       - name: Create ZIP File 
-        run: cd SWCWD-BE && zip -qq SWCWD-build.zip target/*.jar appspec.yml scripts/deploy.sh
+        run: cd SWCWD-BE && zip -qq SWCWD-build.zip target/*.jar appspec.yml scripts/*.sh
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@master
