--- a/SWCWD-FE/package.json
+++ b/SWCWD-FE/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.7.14",
     "vue-cookies": "^1.8.3",
+    "vue-line-clamp": "^1.3.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
