--- a/SWCWD-BE/src/main/resources/application.properties
+++ b/SWCWD-BE/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafit?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafit?serverTimezone=Asia/Seoul
 spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.password=ssafy123
 
 #myBatis
 mybatis.mapper-locations=classpath*:mappers/*.xml
