--- a/SWCWD-FE/package.json
+++ b/SWCWD-FE/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.23.1",
