--- a/SWCWD-FE/package.json
+++ b/SWCWD-FE/package.json
@@ -21,7 +21,8 @@
     "vue-router": "^3.5.1",
     "vue2-datepicker": "^3.11.1",
     "vue2-inline-calendar": "^1.1.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
