--- a/SWCWD-FE/package.json
+++ b/SWCWD-FE/package.json
@@ -13,13 +13,21 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.7",
+    "openai": "^3.2.1",
+    "primevue": "^2.10.1",
+    "sass-loader": "^10.4.1",
     "vue": "^2.7.14",
     "vue-cookies": "^1.8.3",
     "vue-infinite-loading": "^2.4.5",
     "vue-line-clamp": "^1.3.2",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vue-ultimate-skeleton-cards": "^1.0.3",
+    "vue2-datepicker": "^3.11.1",
+    "vue2-inline-calendar": "^1.1.0",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0",
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
