--- a/SWCWD-BE/src/main/resources/application.properties
+++ b/SWCWD-BE/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafit?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://swcwd-db.cql6mnzoqhla.ap-northeast-2.rds.amazonaws.com:3306/ssafit?serverTimezone=Asia/Seoul
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy123
 
