--- a/.github/workflows/BE-on_push.yml
+++ b/.github/workflows/BE-on_push.yml
@@ -1,42 +1,44 @@
-# This is a basic workflow to help you get started with Actions
+# Github Action의 이름 설정
+name: CD-workflow
 
-name: swcwd-workflow
-
-# Controls when the workflow will run
+# Action의 Trigger 설정
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "master" ]
+    branches: ["master"]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # 언제든지 수동으로 실행하게 해주는 옵션
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# 직렬 또는 병렬적으로 실행할 작업의 집합
 jobs:
-  # This workflow contains a single job called "build"
+  # 작업의 이름
   build:
-    # The type of runner that the job will run on
+    # 작업 실행 환경 이미지 설정
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # 실행할 명령들을 순서에 맞게 나열
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # 현재 프로젝트로 작업영역 설정
       - name: Checkout
-        uses: actions/checkout@v3    
+        uses: actions/checkout@v3
 
+      # Github Action Market에 등록된 Java 환경 설정
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '8'
-          cache: 'maven'
-          
+          distribution: "temurin"
+          java-version: "8"
+          cache: "maven"
+
+      # 빌드 명령어 실행
       - name: Build with Maven
         run: cd SWCWD-BE && mvn -B package --file pom.xml
 
-      - name: Create ZIP File 
+      # CodeDeploy는 압축된 파일만 허용함
+      - name: Create ZIP File
         run: cd SWCWD-BE && zip -qq SWCWD-build.zip target/*.jar appspec.yml scripts/*.sh
-      
+
+      # AWS IAM 권한을 가진 사용자 정보 등록
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@master
         with:
@@ -44,9 +46,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
 
+      # CodeDeploy는 AWS 서비스에서만 자료를 받을 수 있으므로 S3에 빌드파일을 업로드
       - name: Upload to S3
         run: cd SWCWD-BE && aws s3 cp --region ap-northeast-2 ./SWCWD-build.zip s3://swcwd-be-build/SWCWD-build.zip
-          
+
+      # 마지막으로 CodeDeploy에게 배포 명령을 내리면 끝!
       - name: Deploy to EC2
         run: aws deploy create-deployment
           --application-name SWCWD-Deploy-BE
